--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ push_docker_image_to_gcr: &push_docker_image_to_gcr
   run:
     name: Pushing Docker Image To GCR
     command: |
-      docker push ${DOCKER_IMAGE_TAG}
+      docker push gcr.io/kubernetes-practice-us/application-api:$CIRCLE_SHA1
 
 update_k8s_deployment: &update_k8s_deployment
   run:
